refactor : 이벤트 트랜잭션 분리로 인한 receiver id 전달로 수정